--- a/app/src/main/res/layout/activity_history_my_comment_toast.xml
+++ b/app/src/main/res/layout/activity_history_my_comment_toast.xml
@@ -2,18 +2,18 @@
 <LinearLayout
     android:id="@+id/activity_history_comment_box_toast"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="#333"
-    android:layout_gravity="bottom"
+    android:layout_margin="5dp"
     android:padding="5dp">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:paddingLeft="5dp"
+        android:paddingLeft="10dp"
         android:tint="#fff"
         android:src="@drawable/ic_comment_black_48px"
         android:background="#0000"/>
@@ -24,8 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:textSize="20dp"
-        android:textColor="#fff"
-        android:text="About my mood..."/>
+        android:textSize="15dp"
+        android:textColor="#fff"/>
 
 </LinearLayout>
