--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,15 @@
         android:src="@drawable/ic_note_add_black"/>
 
     <android.support.v7.widget.AppCompatImageButton
+        android:id="@+id/activity_main_stats_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:background="#00000000"
+        android:layout_margin="30dp"
+        android:src="@drawable/ic_stats_black"/>
+
+    <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/activity_main_history_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
