--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#bbb"
@@ -12,7 +10,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_1"
@@ -25,21 +24,24 @@
                 android:id="@+id/activity_history_mood_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Il y a 1 semaine"/>
+                android:paddingStart="5dp"
+                android:text="@string/week"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-25dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -49,7 +51,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_2"
@@ -62,21 +65,24 @@
                 android:id="@+id/activity_history__mood_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Il y a 6 jours"/>
+                android:paddingStart="5dp"
+                android:text="@string/six_days"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-25dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -86,7 +92,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_3"
@@ -99,21 +106,24 @@
                 android:id="@+id/activity_history__mood_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Il y a 5 jours"/>
+                android:paddingStart="5dp"
+                android:text="@string/five_days"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-20dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -123,7 +133,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_4"
@@ -136,21 +147,24 @@
                 android:id="@+id/activity_history__mood_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Il y a 4 jours"/>
+                android:paddingStart="5dp"
+                android:text="@string/four_days"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-20dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -160,7 +174,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_5"
@@ -173,21 +188,24 @@
                 android:id="@+id/activity_history__mood_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Il y a 3 jours"/>
+                android:paddingStart="5dp"
+                android:text="@string/three_days"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-20dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -197,7 +215,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_6"
@@ -210,21 +229,24 @@
                 android:id="@+id/activity_history__mood_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Avant-hier"/>
+                android:paddingStart="5dp"
+                android:text="@string/two_days"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-20dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
@@ -234,7 +256,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/activity_history_line_7"
@@ -247,21 +270,24 @@
                 android:id="@+id/activity_history__mood_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left"
+                android:gravity="start"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:text="Hier"/>
+                android:paddingStart="5dp"
+                android:text="@string/yesterday"/>
 
             <ImageButton
                 android:id="@+id/activity_history__comment_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="1"
                 android:paddingRight="20dp"
+                android:paddingEnd="20dp"
                 android:layout_marginTop="-20dp"
                 android:src="@drawable/ic_comment_black_48px"
                 android:background="#0000"
+                android:contentDescription="@string/comment_icon"
                 android:visibility="invisible"/>
         </LinearLayout>
     </LinearLayout>
