--- a/app/src/main/res/layout/activity_history_my_comment_toast.xml
+++ b/app/src/main/res/layout/activity_history_my_comment_toast.xml
@@ -13,9 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:paddingStart="10dp"
         android:paddingLeft="10dp"
         android:tint="#fff"
         android:src="@drawable/ic_comment_black_48px"
+        android:contentDescription="@string/comment_icon"
         android:background="#0000"/>
 
     <TextView
@@ -24,7 +26,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="#fff"/>
 
 </LinearLayout>
