--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:id="@+id/activity_main_comment_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
+        android:layout_gravity="bottom|start"
         android:background="#00000000"
         android:layout_margin="30dp"
         android:src="@drawable/ic_note_add_black"/>
@@ -36,7 +36,7 @@
         android:id="@+id/activity_main_history_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:background="#00000000"
         android:layout_margin="30dp"
         android:src="@drawable/ic_history_black"/>
