--- a/app/src/main/res/layout/activity_main_my_comment_box.xml
+++ b/app/src/main/res/layout/activity_main_my_comment_box.xml
@@ -12,14 +12,15 @@
         android:gravity="center"
         android:background="#999"
         android:padding="10dp"
-        android:textSize="20dp"
-        android:text="About my mood..."/>
+        android:textSize="20sp"
+        android:text="@string/comment_box_title"/>
 
     <EditText
+        android:inputType="text"
         android:id="@+id/activity_main_my_comment_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:hint="My comment..."/>
+        android:hint="@string/comment_placeholder"/>
     
 </LinearLayout>
